--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ local_settings.py
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml 
 !.elasticbeanstalk/*.global.yml
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
